[package]
name = "tv-remote"
version = "0.1.0"
authors = ["Igor null <m1el.2027@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features=["macros"] }
warp = "0.2"
winapi = { version = "0.3.8", features=["winuser"] }
